<resources>
    <string name="app_name">GreekNav</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tapanywheretostart">Tap anywhere to start</string>
    <string name="rotate_left_or_right_or_tap_to_restart">rotate left or right or tap to restart</string>
    <string name="tap_to_finish_when_ready_or_continue_rotating">tap to finish when ready or continue rotating</string>
    <string name="hold_the_device_vertically">hold the device vertically</string>


    <string name="createAccount">Create Account</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="forgotPassword">Forgot Password? </string>
    <string name="createAccountUnderline">Create Account <u>Here</u></string>

    <string name="logIn">Log In</string>
    <string name="logInInfo">Log In Information </string>
    <string name="rushInfo">Rush Information</string>
    <string name="profileInfo">Profile Information</string>
    <string name="gender">Gender:</string>
    <string name="sexuality">Sexuality:</string>
    <string name="houseAffiliation">House Affiliation</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="year">Year:</string>
    <string name="subscribed">Subscribed:</string>
    <string name="affiliated">Affiliated:</string>
    <string name="notification">Notification Settings:</string>
    <string name="past_posts">Past Posts:</string>
    <string name="username">Username</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="sororities">Sororities</string>
    <string name="genderInclusiveHouses">Gender-Inclusive Houses</string>
    <string name="nationalPanHellenic">National Pan-Hellenic</string>
    <string name="fraternities">Fraternities</string>
    <string name="interestedIn">Interested In:</string>
    <string name="feed">Your Feed</string>
    <string name="filter">Filter</string>
    <string name="forum">Forum</string>
    <string name="post">post</string>
    <string name="confirmEmail">Confirm Email:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nonBinary">Non-Binary</string>
    <string name="submitComment">Submit Comment</string>
    <string name="logout">logout</string>
    <string name="updateProfile">Update Profile</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="tagsHouses">House Tags:</string>
    <string name="axa">Alpha Chi</string>
    <string name="beta">Beta</string>
    <string name="bg">BG</string>
    <string name="chiGam">Chi Gam</string>
    <string name="hereot">Hereot</string>
    <string name="gdx">GDX</string>
    <string name="triKap">Tri-Kap</string>
    <string name="phiDelt">Phi Delt</string>
    <string name="sigNu">Sig Nu</string>
    <string name="psiU">Psi U</string>
    <string name="tdx">TDX</string>
    <string name="zete">Zete</string>
    <string name="aPhi">APhi</string>
    <string name="AZiD">AXiD</string>
    <string name="chiDelt">Chi Delt</string>
    <string name="ekt">EKT</string>
    <string name="kd">KD</string>
    <string name="kde">KDE</string>
    <string name="kappa">Kappa</string>
    <string name="sigDelt">Sigma Delt</string>
    <string name="deltas">ΔΣΘ</string>
    <string name="alphas">ΑΦΑ</string>
    <string name="AKA">AKA</string>
    <string name="alphaTheta">Alpha Theta</string>
    <string name="Tabard">Tabard</string>
    <string name="phiTau">Phi Tau</string>
    <string name="postHint">Type Post Here</string>
    <string name="resetPassword">Reset Password</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="likes">Likes</string>
    <string name="poc">POC</string>
    <string name="LGBTQ">LGBTQ</string>
    <string name="firstGen">First-Gen</string>
    <string name="lowIncome">Low Income</string>
    <string name="personalTags">Personal Tags:</string>
    <string name="TwentyOneSpring"> 21S - start talking to house members and attend rush events if possible</string>
    <string name="TwentyOneSummer"> 21X - reach out to rush chairs, or people you know</string>
    <string name="TwentyOneFall"> 21F - attend info sessions and fill out the rush forms</string>
    <string name="TwentyTwoWinter"> 22W - continue meeting people in the house you are interested in, meet beyond the basement scene</string>
    <string name="filterText">choose one to filter the houses</string>
    <string name="houseName">HOUSE NAME</string>
    <string name="subscribers"># Subscribers</string>
    <string name="houseReviews">Reviews:</string>
    <string name="subscribe">subscribe</string>
    <string name="houseSummary">House Summary:</string>
    <string name="pointsOfContacts">Points of Contact:</string>
    <string name="stats">Self-Reported Stats:</string>
    <string name="houseTour">House Tour:</string>
    <string name="exploreHouse">explore the house</string>
    <string name="leaveReview">leave a review</string>
    <string name="browseHouse">Browse By Houses:</string>
    <string name="reviewComments">Comments:</string>
    <string name="reviewOverall">Overall:</string>
    <string name="reviewBasement">Basement:</string>
    <string name="reviewInclusivity">Inclusivity:</string>
    <string name="reviewSafety">Safety:</string>
    <string name="outOf5">/5</string>
    <string name="houseSummaryHint">Click to edit House Summary</string>
    <string name="national">National</string>
    <string name="local">Local</string>
    <string name="president">President:</string>
    <string name="vice">Vice President:</string>
    <string name="tres">Treasurer:</string>
    <string name="rushChair">Rush Chair:</string>
    <string name="clickToEdit">CLICK TO EDIT</string>
    <string name="totalMembers">Total Members:</string>    POC Members:
    <string name="pocMembers">POC Members:</string>
    <string name="queerMembers">LGBTQ+ Members:</string>
    <string name="cancelComment">Cancel Comment</string>

</resources>