<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/backgroundColor"

    tools:context=".Authentication">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/textColor"
        android:layout_marginTop="50dp"
        android:textSize="60sp"
        android:layout_gravity="center"/>
    <string name="textColor">#F7FFF7</string>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/profileInfo"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/textColor"
        android:text="@string/gender"
        android:layout_marginStart="25dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/background"
        android:layout_gravity="center"
        android:id="@+id/createGender"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/textColor"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:text="@string/sexuality"
        android:layout_marginStart="25dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/background"
        android:layout_gravity="center"
        android:id="@+id/createSexuality"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:text="@string/year"
        android:layout_marginStart="25dp"
        android:textColor="@color/textColor"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:id="@+id/createYear"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/houseAffiliation"
        android:layout_marginStart="25dp"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/textColor"/>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createAffiliated">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="25dp">
            <RadioButton
                android:textColor="@color/textColor"
                android:id="@+id/createYesAffiliated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:layout_marginStart="30dp"/>
            <RadioButton
                android:layout_marginStart="10dp"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:id="@+id/createNoAffiliated"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp">
            </RadioButton>
        </LinearLayout>
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/interestedIn"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginStart="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fraternities"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/textColor"
           />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationalPanHellenic"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/textColor">
        </RadioButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:text="@string/genderInclusiveHouses">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:text="@string/sororities">
        </RadioButton>
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/background"
        android:text="@string/createAccount"
        android:onClick="createAccount2"/>


</LinearLayout>