<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:fontFamily="@font/cabin"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_background"
        android:layout_marginStart="295dp"
        android:textColor="@color/textColor"
        android:onClick="savePost"
        android:textSize="18sp"
        android:text="@string/post"
        android:layout_marginTop="20dp"
        android:id="@+id/postSave"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/postCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/teal_background"
        android:fontFamily="@font/cabin"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/action_cancel"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:onClick="cancelPost"
        app:layout_anchor="@+id/postCancel"
        app:layout_anchorGravity="center" />


    <EditText
        android:id="@+id/postUserText"
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:paddingStart="15dp"
        android:inputType="text"
        android:paddingEnd="15dp"
        android:hint="@string/postHint"
        android:paddingTop="20sp"
        android:background="@drawable/post_background"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/textColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="40dp"
        android:id="@+id/createPostUsername"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="320dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/tagsHouses"
        android:textColor="@color/textColor"
        android:textSize="18sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:background="@drawable/ic_baseline_info_24"
        android:layout_marginStart="140dp"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScroll"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tags"
        android:layout_marginTop="355dp">

        <LinearLayout
            android:id="@+id/linearLayoutInHorizontalScroll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/axa"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/AKA"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/national_pan_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/aPhi"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/sororities_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/alphas"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/national_pan_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/alphaTheta"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/gender_inclusive_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/AZiD"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/sororities_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/bg"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/beta"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/chiDelt"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/sororities_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/chiGam"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/deltas"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/national_pan_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/ekt"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/sororities_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/gdx"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/hereot"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/kappa"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/sororities_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/kd"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/sororities_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/kde"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/sororities_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/triKap"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/phiDelt"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/phiTau"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/gender_inclusive_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/psiU"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/sigDelt"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/sororities_selector"
            />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/sigNu"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/Tabard"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/gender_inclusive_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/tdx"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/zete"
                android:textColor="@drawable/tags_font_color"
                android:background="@drawable/frat_button_selector"
                />

        </LinearLayout>

    </HorizontalScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>