<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@string/backgroundColor"
    tools:context=".Profile">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="30dp"
        android:background="@drawable/background"
        app:elevation="2dp"
        app:menu="@menu/navbar"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="30dp"
        app:itemRippleColor="@android:color/transparent"
        app:itemIconTint="@drawable/item_selector"
        android:id="@+id/bottomBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@string/textColor"
        android:text="@string/username"
        android:fontFamily="@font/montserrat_bold"
        android:layout_gravity="left"
        android:layout_marginLeft="55dp"
        android:textSize="30sp"
        android:layout_marginTop="90dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@string/textColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/affiliated"
        android:textSize="16sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="55dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@string/textColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/year"
        android:textSize="16sp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@string/textColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/sexuality"
        android:textSize="16sp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="160dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@string/textColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/gender"
        android:textSize="16sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="160dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@string/textColor"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"
        android:text="@string/subscribed"
        android:layout_marginTop="200dp"
        android:layout_marginStart="55dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@string/textColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/notification"
        android:textSize="20sp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="400dp"
        android:textColor="@string/textColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/past_posts"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:layout_marginTop="330dp"
        android:layout_marginStart="55dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@string/textColor"
            android:fontFamily="@font/montserrat"
            android:text="@string/on"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@string/textColor"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:text="@string/off"
            android:layout_marginStart="25dp"/>
    </LinearLayout>



    <ListView
        android:id="@+id/profileListView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="430dp"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>